Project layerbit_oraculs_bet {
  database_type: 'PostgreSQL'
  Note: '''
    # Layerbit Oraculs Bet Database Schema
    
    This schema represents the database structure for the Layerbit Oraculs Bet system,
    including both the odds-service and gateway-service components.
    
    ## Key Features:
    - User authentication and identity management
    - Sports betting odds collection and normalization
    - Event and team management
    - Bookmaker integration
  '''
}

// =============================================================================
// USER MANAGEMENT TABLES (Gateway Service)
// =============================================================================

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  email text [unique, note: 'nullable, indexed']
  email_verified bool [not null, default: false]
  password_hash text [note: 'nullable for OAuth users']
  plan_type text [not null, default: 'free', note: 'enum: free, pro, partner']
  trial_end_at timestamptz [note: 'nullable']
  telegram_account_id bigint [unique, note: 'nullable, indexed']
  telegram_is_premium bool [note: 'nullable']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  
  Note: 'User accounts with multiple authentication providers'
}

Table user_identities {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, not null, note: 'CASCADE delete']
  provider text [not null, note: 'enum: google, password, telegram']
  provider_user_id text [not null]
  username text [note: 'nullable']
  first_name text [note: 'nullable']
  last_name text [note: 'nullable']
  language_code text [note: 'nullable']
  photo_url text [note: 'nullable']
  is_premium bool [note: 'nullable']
  created_at timestamptz [not null, default: `now()`]
  
  Note: 'User identity providers - UNIQUE constraint on (provider, provider_user_id)'
}

Table user_sessions {
  jti uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, not null, note: 'CASCADE delete']
  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null]
  user_agent text [note: 'nullable']
  
  Note: 'JWT session tokens'
}

// =============================================================================
// SPORTS & BETTING TABLES (Odds Service)
// =============================================================================

Table sports {
  id uuid [pk, default: `uuid_generate_v4()`]
  provider text [not null, default: 'odds_api', note: 'Источник данных, mvp - odds_api']
  category text [not null, note: 'напр. soccer, tennis, basketball, ice hockey']
  is_active boolean [not null, note: 'Выставляется явно инжестом (зеркало факта наличия активных competitions)']
  plan_visibility text [not null, default: 'free']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (provider, category) [name: 'uq_sports_provider_category', unique: true]
    (is_active) [name: 'idx_sports_is_active']
  }

  Note: 'Sport categories like soccer, basketball, etc.'
}

Table competitions {
  id uuid [pk, default: `uuid_generate_v4()`]
  sport_id uuid [ref: > sports.id, on delete: CASCADE, not null]
  title text [not null, note: 'Напр.: UEFA Champions League или EPL']
  description text [note: 'Напр.: English Premier League, Опционально, из провайдера']
  provider text [not null, default: 'odds_api', note: 'Источник данных, (mvp - odds_api)']
  slug_key text [not null, note: 'Из sports.key, напр.: "soccer_uefa_champs_league"']
  plan_visibility text [not null, default: 'free']
  api_sources jsonb [default: '{}', note: 'Additional API source information']
  is_active boolean [not null, note: 'payload.active из провайдера; без default, ставим явно в инжесте']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`, note: 'При обновлении competition например is_active -> true или false']

  indexes {
    (provider, slug_key) [name: 'uq_competitions_slug_key', unique: true]
    (sport_id) [name: 'idx_competitions_sport_id']
    (is_active) [name: 'idx_competitions_is_active']
  }

  Note: 'Sport competitions/leagues/tournaments'
}

Table teams {
  id uuid [pk, default: `uuid_generate_v4()`]
  sport_id uuid [ref: > sports.id, on delete: CASCADE, not null]
  name text [not null]
  normalized_name text [not null]
  team_slug text [not null, note: 'URL-friendly team identifier']
  external_ids jsonb [default: '{}']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (sport_id, normalized_name) [name: 'uq_teams_sport_normalized_name', unique: true]
    (sport_id, team_slug) [name: 'uq_teams_sport_team_slug', unique: true]
    (sport_id) [name: 'idx_teams_sport_id']
    (sport_id, normalized_name) [name: 'idx_teams_sport_normalized_name']
    (sport_id, team_slug) [name: 'idx_teams_sport_team_slug']
  }

  Note: 'Sports teams participating in events'
}

Table events {
  id uuid [pk, default: `uuid_generate_v4()`]
  provider text [not null, default: 'odds_api']
  external_id text [not null]
  sport_id uuid [ref: > sports.id, on delete: CASCADE, not null]
  competition_id uuid [ref: > competitions.id, on delete: CASCADE, not null]
  home_team_id uuid [ref: > teams.id, on delete: CASCADE, note: 'nullable']
  away_team_id uuid [ref: > teams.id, on delete: CASCADE, note: 'nullable']
  home_team_name text [note: 'nullable']
  away_team_name text [note: 'nullable']
  commence_time timestamptz [not null]
  status text [default: 'upcoming', note: 'upcoming, live, completed, cancelled']
  participant_mode text [not null, default: 'unknown', note: 'enum: duel, solo, field, unknown']
  participants jsonb [not null, default: '[]', note: 'Flexible participant storage']
  event_metadata jsonb [default: '{}', note: 'Additional event metadata']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  ingested_at timestamptz [note: 'nullable']
  last_seen_at timestamptz [note: 'nullable']

  indexes {
    (provider, external_id) [name: 'uq_events_provider_external_id', unique: true]
    (sport_id) [name: 'idx_events_sport_id']
    (competition_id) [name: 'idx_events_competition_id']
    (commence_time) [name: 'idx_events_commence_time']
    (status) [name: 'idx_events_status']
    (external_id) [name: 'idx_events_external_id']
    (competition_id, commence_time) [name: 'idx_events_competition_commence']
  }

  Note: 'Sporting events/matches'
}

Table bookmakers {
  id uuid [pk, default: `uuid_generate_v4()`]
  key text [not null, unique]
  name text [not null]
  region text [not null]
  is_active boolean [default: true]
  created_at timestamptz [default: `now()`]

  indexes {
    (key) [name: 'idx_bookmakers_key']
    (is_active) [name: 'idx_bookmakers_is_active']
  }

  Note: 'Bookmakers providing odds data'
}

Table odds_snapshots {
  id uuid [pk, default: `uuid_generate_v4()`]
  event_id uuid [ref: > events.id, on delete: CASCADE, not null]
  bookmaker_id uuid [ref: > bookmakers.id, on delete: CASCADE, not null]
  market_type text [not null, note: 'h2h, spreads, totals']
  outcomes jsonb [not null]
  timestamp_source timestamptz [not null]
  timestamp_ingested timestamptz [default: `now()`]
  created_at timestamptz [default: `now()`]

  indexes {
    (event_id) [name: 'idx_odds_snapshots_event_id']
    (bookmaker_id) [name: 'idx_odds_snapshots_bookmaker_id']
    (market_type) [name: 'idx_odds_snapshots_market_type']
    (timestamp_ingested) [name: 'idx_odds_snapshots_timestamp_ingested', type: 'btree', order: 'desc']
    (event_id, bookmaker_id, market_type) [name: 'uq_odds_snapshots_event_book_mkt', unique: true]
  }

  Note: 'Raw odds data snapshots from bookmakers'
}

Table normalized_odds {
  id uuid [pk, default: `uuid_generate_v4()`]
  event_id uuid [ref: > events.id, on delete: CASCADE, not null]
  market_type text [not null]
  home_odds_avg numeric(10,2) [not null]
  away_odds_avg numeric(10,2) [not null]
  draw_odds_avg numeric(10,2) [note: 'nullable']
  home_odds_best numeric(10,2) [not null]
  away_odds_best numeric(10,2) [not null]
  draw_odds_best numeric(10,2) [note: 'nullable']
  bookmakers_count integer [not null, default: 0]
  timestamp_source timestamptz [not null]
  timestamp_ingested timestamptz [not null]
  timestamp_normalized timestamptz [default: `now()`]
  created_at timestamptz [default: `now()`]

  indexes {
    (event_id) [name: 'idx_normalized_odds_event_id']
    (market_type) [name: 'idx_normalized_odds_market_type']
    (timestamp_normalized) [name: 'idx_normalized_odds_timestamp_normalized', type: 'btree', order: 'desc']
    (event_id, market_type) [name: 'uq_normalized_odds_event_market', unique: true]
  }

  Note: 'Normalized and aggregated odds data'
}

Table event_priorities {
  id uuid [pk, default: `uuid_generate_v4()`]
  event_id uuid [ref: > events.id, on delete: CASCADE, not null]
  priority integer [not null, default: 0]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (event_id) [name: 'idx_event_priorities_event_id', unique: true]
    (priority) [name: 'idx_event_priorities_priority']
  }

  Note: 'Priority levels for events to determine processing order'
}

// =============================================================================
// RELATIONSHIPS
// =============================================================================

Ref: sports.id < competitions.sport_id
Ref: sports.id < events.sport_id
Ref: sports.id < teams.sport_id
Ref: competitions.id < events.competition_id
Ref: events.id < odds_snapshots.event_id
Ref: events.id < normalized_odds.event_id
Ref: events.id < event_priorities.event_id
Ref: bookmakers.id < odds_snapshots.bookmaker_id
Ref: teams.id < events.home_team_id
Ref: teams.id < events.away_team_id

// User management relationships
Ref: users.id < user_identities.user_id
Ref: users.id < user_sessions.user_id
